# MusicKeyboard

./: .gitignore  README.md  matrix_diagram.html  project_direction.md  sampler_research_notes.md
docs/: bringup_status.md  pico_sdk_env.md  rp2350_minimal_bringup_profile.md  st7789_lcd.md  standalone_sampler_skeleton.md  todo.md
firmware/: CMakeLists.txt
firmware/include/music_keyboard/: app.h  button_map.h  config.h  types.h
firmware/include/music_keyboard/core/: audio_engine.h  sample_bank.h  sequencer.h  transport.h
firmware/include/music_keyboard/platform/: audio_hal.h  d200_link.h  lcd_hal.h  rp2350_pinmap.h  storage_hal.h
firmware/rp2350_bringup/: CMakeLists.txt  main.c
firmware/rp2350_smoke/: CMakeLists.txt  main.c
firmware/src/: app.c  main.c
firmware/src/core/: audio_engine.c  sample_bank.c  sequencer.c  transport.c
firmware/src/platform/host/: audio_hal_host.c  d200_link_host.c  storage_hal_host.c
firmware/src/platform/rp2350/: README.md  audio_hal_rp2350.c  audio_hal_rp2350_i2s.c  audio_i2s_out.pio  d200_link_rp2350.c  diskio_sd_spi_rp2350.c  st7789_rp2350.c  storage_hal_rp2350.c
samples/: README.md
scripts/: build_rp2350_bringup.sh  build_rp2350_smoke.sh  flash_rp2350_bringup.sh  flash_rp2350_smoke.sh  pico_env.zsh
